@@ -1,67 +1,11 @@
-dnl
-dnl check where to install documentation
-dnl
-dnl determines documentation "root directory", i.e. the directory
-dnl where all documentation will be placed in
-dnl
-dnl
-AC_DEFUN([GP_CHECK_DOC_DIR],
-[
-AC_BEFORE([$0], [GP_BUILD_GTK_DOCS])dnl
-AC_BEFORE([$0], [GP_CHECK_DOXYGEN])dnl
-
-AC_ARG_WITH([doc-dir],
-[AS_HELP_STRING([--with-doc-dir=PATH],
-[Where to install docs  [default=autodetect]])])
-
-# check for the main ("root") documentation directory
-AC_MSG_CHECKING([main docdir])
-
-if test "x${with_doc_dir}" != "x"
-then # docdir is given as parameter
-    docdir="${with_doc_dir}"
-    AC_MSG_RESULT([${docdir} (from parameter)])
-else # otherwise invent a docdir hopefully compatible with system policy
-    if test -d "/usr/share/doc"
-    then
-        maindocdir='${prefix}/share/doc'
-        AC_MSG_RESULT([${maindocdir} (FHS style)])
-    elif test -d "/usr/doc"
-    then
-        maindocdir='${prefix}/doc'
-        AC_MSG_RESULT([${maindocdir} (old style)])
-    else
-        maindocdir='${datadir}/doc'
-        AC_MSG_RESULT([${maindocdir} (default value)])
-    fi
-    AC_MSG_CHECKING([package docdir])
-    # check whether to include package version into documentation path
-    # FIXME: doesn't work properly.
-    if ls -d /usr/{share/,}doc/make-[0-9]* > /dev/null 2>&1
-    then
-        docdir="${maindocdir}/${PACKAGE}-${VERSION}"
-        AC_MSG_RESULT([${docdir} (redhat style)])
-    else
-        docdir="${maindocdir}/${PACKAGE}"
-        AC_MSG_RESULT([${docdir} (default style)])
-    fi
-fi
-
-AC_SUBST([docdir])
-])dnl
-
-dnl
+dnl ####################################################################
 dnl check whether to build docs and where to:
 dnl
 dnl * determine presence of prerequisites (only gtk-doc for now)
 dnl * determine destination directory for HTML files
+dnl ####################################################################
 dnl
-
-AC_DEFUN([GP_BUILD_GTK_DOCS],
-[
-# docdir has to be determined in advance
-AC_REQUIRE([GP_CHECK_DOC_DIR])
-
+AC_DEFUN([GP_BUILD_GTK_DOCS], [dnl
 # ---------------------------------------------------------------------------
 # gtk-doc: We use gtk-doc for building our documentation. However, we
 #          require the user to explicitly request the build.
@@ -88,27 +32,8 @@ fi
 AM_CONDITIONAL([ENABLE_GTK_DOC], [$have_gtkdoc])
 GP_CONFIG_MSG([build API docs with gtk-doc],[$gtkdoc_msg])
 
-
-# ---------------------------------------------------------------------------
-# Give the user the possibility to install html documentation in a 
-# user-defined location.
-# ---------------------------------------------------------------------------
-AC_ARG_WITH([html-dir],
-[AS_HELP_STRING([--with-html-dir=PATH],
-[Where to install html docs [default=autodetect]])])
-
-AC_MSG_CHECKING([for html dir])
-if test "x${with_html_dir}" = "x" ; then
-    htmldir="${docdir}/html"
-    AC_MSG_RESULT([${htmldir} (default)])
-else
-    htmldir="${with_html_dir}"
-    AC_MSG_RESULT([${htmldir} (from parameter)])
-fi
-AC_SUBST([htmldir])
 apidocdir="${htmldir}/api"
 AC_SUBST([apidocdir])
-
 ])dnl
 dnl
 dnl
